--- a/Trial Project/ServerSide/.project
+++ b/Trial Project/ServerSide/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ServerSide</name>
+	<name>HTTPServerSide</name>
 	<comment></comment>
 	<projects>
 	</projects>
