--- a/Trial Project/ServerSide/WebContent/WEB-INF/web.xml
+++ b/Trial Project/ServerSide/WebContent/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
-  <display-name>ServerSide</display-name>
+  <display-name>HTTPServerSide</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
@@ -10,15 +10,12 @@
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
   <servlet>
-  	<servlet-name>FServlet</servlet-name>
-  	<servlet-class>ca.carleton.sysc4001.project.trial.java.server.TrialProjectServlet</servlet-class>
-  	<!-- This will load the servlet into the JVM on start up rather than on request -->
-  	<load-on-startup>1</load-on-startup>
+    <servlet-name>FServlet</servlet-name>
+    <servlet-class>ca.carleton.sysc4001.project.trial.java.server.TrialProjectServlet</servlet-class>
+    <load-on-startup>1</load-on-startup>
   </servlet>
   <servlet-mapping>
-  	<servlet-name>FServlet</servlet-name>
-  	<url-pattern>/fservlet</url-pattern>
+    <servlet-name>FServlet</servlet-name>
+    <url-pattern>/fservlet</url-pattern>
   </servlet-mapping>
-
-
 </web-app>
