--- a/Term Project - Client/.classpath
+++ b/Term Project - Client/.classpath
@@ -2,5 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry kind="lib" path="/Term Project - Server/src/has/server/connection"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Term Project - Communication"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
